# os_lab_4_belyak_andrei

./: CMakeLists.txt
doc/: отчет_4_лаба_ос.docx
include/: contract.h
src/: lib1.c  lib2.c  program1.c  program2.c
